--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
@@ -47,7 +47,7 @@
             android:id="@+id/footprintListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="#fafafa"
+            android:divider="#eeeeee"
             android:dividerHeight="1dp"
             >
         </com.huoqiu.widget.pinnedlistview.PinnedHeaderListView>
