--- a/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
@@ -4,10 +4,13 @@
     android:layout_height="wrap_content"
     android:background="@null"
     android:orientation="vertical" >
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/user_bg" />
 	<View android:layout_width="match_parent"
 	    android:layout_height="0.5dp"
 	    android:background="#E5E5E5"
-        android:layout_marginTop="10dp"
 	    />
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,7 +35,6 @@
             android:layout_centerVertical="true"
             android:textColor="#dd000000"
             android:layout_toRightOf="@id/checkBox"
-            android:drawableRight="@drawable/diamond"
             android:drawablePadding="10dp"
             android:textSize="16sp" />
         <TextView
