--- a/BestarProject/ShoppingMall/src/main/res/layout/layout_consult_top.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/layout_consult_top.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/user_bg"
-    android:clickable="true"
-    android:orientation="vertical">
-
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_layout_height"
@@ -24,34 +21,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="地区经理-杭州"
+            android:text="本地经理"
             android:textColor="#333"
             android:id="@+id/titleTv"
             android:textSize="18sp" />
 
-        <ImageButton
-            android:id="@+id/voucherHelpBtn"
+        <TextView
+            android:id="@+id/moreAreaTv"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:background="@null"
-            android:src="@drawable/selector_help_btn" />
+            android:text="更多\n地区"
+            android:gravity="center"
+            android:textColor="@color/app_theme_color"
+            android:textSize="16sp"
+            />
     </RelativeLayout>
-
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/line_mine_color"></View>
-
-
-    <ListView
-        android:id="@+id/agentedListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/user_bg"
-        android:cacheColorHint="#00000000"
-        android:divider="#00ffffff"
-        android:dividerHeight="10dp"
-        android:layout_marginTop="10dp"
-        android:scrollbars="none"></ListView>
 </LinearLayout>
