--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_business_wap.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_business_wap.xml
@@ -31,17 +31,17 @@
                 android:textColor="#333"
                 android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/agencyBtn"
+            <TextView
+                android:id="@+id/collectBtn"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@null"
+                android:text="收藏"
+                android:gravity="center"
                 android:textColor="@color/app_theme_color"
-                android:text="代理"
-                android:visibility="gone"
-                android:textSize="18sp"
-                 />
+                android:textSize="16sp"
+                />
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
@@ -56,5 +56,24 @@
             android:layout_below="@id/topLineView"
             android:background="@color/color_ffffff"
             android:id="@+id/businessWebView"
+            android:layout_above="@+id/bottomLayout"
             ></WebView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:id="@+id/bottomLayout"
+        android:background="@color/user_bg"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/confirmBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_submit_btn"
+            android:text="我要咨询"
+            android:textColor="@color/tetx_title_color"
+            android:textSize="22sp" />
+    </LinearLayout>
 </RelativeLayout>
