--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_product_wap.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_product_wap.xml
@@ -31,13 +31,17 @@
                 android:textColor="#333"
                 android:textSize="18sp" />
 
-            <ImageButton
-                android:id="@+id/eidtBtn"
+            <TextView
+                android:id="@+id/collectBtn"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="@null"
-                android:src="@drawable/selector_edit_info_btn" />
+                android:text="收藏"
+                android:gravity="center"
+                android:textColor="@color/app_theme_color"
+                android:textSize="16sp"
+                />
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
