--- a/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
@@ -35,10 +35,12 @@
 
             <TextView
                 android:id="@+id/companyNameTv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="凯奇集团"
                 android:textColor="#dd000000"
+                android:layout_toLeftOf="@+id/cityNameTv"
+                android:singleLine="true"
                 android:textSize="@dimen/list_item_title_text_size" />
 
             <TextView
@@ -57,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:text="中国最具权威幼儿园设计"
-            android:textColor="#8a000000"
+            android:textColor="#38BCFD"
             android:textSize="@dimen/list_item_content_text_size" />
 
         <LinearLayout
@@ -85,7 +87,8 @@
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:text="3256"
-                    android:textColor="#ff5104"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#8a000000"
                     android:textSize="@dimen/list_item_content_text_size" />
             </LinearLayout>
 
@@ -107,7 +110,8 @@
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:text="3256"
-                    android:textColor="#ff5104"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#8a000000"
                     android:textSize="@dimen/list_item_content_text_size" />
             </LinearLayout>
 
@@ -129,7 +133,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3256"
-                    android:textColor="#ff5104"
+                    android:textColor="#8a000000"
+                    android:singleLine="true"
+                    android:layout_marginLeft="10dp"
                     android:textSize="@dimen/list_item_content_text_size" />
             </LinearLayout>
         </LinearLayout>
