--- a/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_product.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_product.xml
@@ -9,7 +9,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxItem"
         android:visibility="gone"
         style="@style/CustomCheckboxTheme"
         />
