--- a/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_collect_list.xml
@@ -41,6 +41,7 @@
                 android:textColor="#dd000000"
                 android:layout_toLeftOf="@+id/cityNameTv"
                 android:singleLine="true"
+                android:layout_marginRight="15dp"
                 android:textSize="@dimen/list_item_title_text_size" />
 
             <TextView
