--- a/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkBoxSection"
-            android:visibility="gone"
+            android:visibility="visible"
             style="@style/CustomCheckboxTheme"
             />
         <TextView
@@ -34,7 +34,7 @@
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:textColor="#dd000000"
-            android:layout_toRightOf="@id/checkBox"
+            android:layout_toRightOf="@id/checkBoxSection"
             android:drawablePadding="10dp"
             android:textSize="16sp" />
         <TextView
