--- a/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/fragment_footprintlist.xml
@@ -47,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/topLayout"
+            android:layout_above="@+id/bottomLayout"
             android:divider="#eeeeee"
             android:dividerHeight="1dp"
             >
