--- a/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
+++ b/BestarProject/ShoppingMall/src/main/res/layout/item_footprint_list_sections.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkBoxSection"
-            android:visibility="visible"
+            android:visibility="gone"
             style="@style/CustomCheckboxTheme"
             />
         <TextView
